--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "G-Link",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:joshuaking06/G-Link.git",
-  "author": "joshuaking06 <joshua.king0692@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.5",
-    "body-parser": "^1.18.3",
-    "css-loader": "^2.1.1",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
-    "mongoose": "^5.4.22",
-    "node-sass": "^4.11.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
-  }
+	"name": "g-link",
+	"version": "1.0.0",
+	"main": "index.js",
+	"repository": "git@github.com:joshuaking06/G-Link.git",
+	"author": "joshuaking06 <joshua.king0692@gmail.com>",
+	"license": "MIT",
+	"scripts": {
+		"start": "node index",
+		"serve": "webpack-dev-server --mode=development",
+		"build": "webpack -p"
+	},
+	"dependencies": {
+		"axios": "^0.18.0",
+		"body-parser": "^1.18.3",
+		"dotenv": "^7.0.0",
+		"express": "^4.16.4",
+		"express-graphql": "^0.7.1",
+		"graphql": "^14.2.1",
+		"mongoose": "^5.4.22",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-router-dom": "^5.0.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.4.3",
+		"@babel/preset-env": "^7.4.3",
+		"@babel/preset-react": "^7.0.0",
+		"babel-loader": "^8.0.5",
+		"css-loader": "^2.1.1",
+		"html-webpack-plugin": "^3.2.0",
+		"node-sass": "^4.11.0",
+		"sass-loader": "^7.1.0",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.29.6",
+		"webpack-cli": "^3.3.0",
+		"webpack-dev-server": "^3.2.1"
+	}
 }
