--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"mongoose": "^5.4.22",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-router-dom": "^5.0.0"
+		"react-router-dom": "^5.0.0",
+		"request": "^2.88.0",
+		"request-promise": "^4.2.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.4.3",
