--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"build": "webpack -p"
 	},
 	"dependencies": {
+		"apicalypse": "^0.1.3",
 		"axios": "^0.18.0",
 		"body-parser": "^1.18.3",
 		"dotenv": "^7.0.0",
