--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 	"dependencies": {
 		"apicalypse": "^0.1.3",
 		"axios": "^0.18.0",
+		"bcrypt": "^3.0.5",
 		"body-parser": "^1.18.3",
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
 		"express-graphql": "^0.7.1",
 		"graphql": "^14.2.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.4.22",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
