--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"dependencies": {
 		"apicalypse": "^0.1.3",
 		"axios": "^0.18.0",
-		"bcrypt": "^3.0.5",
+		"bcrypt": "^3.0.6",
 		"body-parser": "^1.18.3",
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
@@ -21,6 +21,7 @@
 		"graphql": "^14.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.4.22",
+		"mongoose-unique-validator": "^2.0.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-router-dom": "^5.0.0",
