--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.6",
 		"body-parser": "^1.18.3",
+		"bulma": "^0.7.4",
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
 		"express-graphql": "^0.7.1",
