starting on the slider

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"mongoose": "^5.4.22",
 		"mongoose-unique-validator": "^2.0.2",
 		"react": "^16.8.6",
+		"react-alice-carousel": "^1.13.11",
 		"react-dom": "^16.8.6",
 		"react-parallax": "^2.2.0",
 		"react-router-dom": "^5.0.0",
