--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"react-parallax": "^2.2.0",
 		"react-router-dom": "^5.0.0",
 		"request": "^2.88.0",
-		"request-promise": "^4.2.4"
+		"request-promise": "^4.2.4",
+		"socket.io": "^2.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.4.3",
