--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
 		"mongoose": "^5.4.22",
+		"mongoose-deep-populate": "^3.1.1",
 		"mongoose-unique-validator": "^2.0.2",
 		"react": "^16.8.6",
 		"react-alice-carousel": "^1.13.11",
